RESOLVED FIXED74129
SnowLeopard: ends of scrollbar thumbs drawn incorrectly
https://bugs.webkit.org/show_bug.cgi?id=74129
Summary SnowLeopard: ends of scrollbar thumbs drawn incorrectly
Mehmet
Reported 2011-12-08 14:39:27 PST
Created attachment 118473 [details] Screenshot Version 5.1.2 (6534.52.7, r102332) MacOS 10.6.8 What steps will reproduce the problem? 1. Visit a page 2. Shrink the window so that scrollbars appear 3. Take a look at the scrollbar at the bottom Expected: No glitches. Actual: There are glitches. ***Screenshot attached*** Thanks and regards Mehmet
Attachments
Screenshot (66.26 KB, image/png)
2011-12-08 14:39 PST, Mehmet
no flags
Webkit Scrollbar Bug (289.84 KB, image/png)
2011-12-08 14:42 PST, Mehmet
no flags
Screenshot (75.80 KB, image/png)
2012-01-13 10:42 PST, Mehmet
no flags
patch (4.08 KB, patch)
2012-04-05 14:46 PDT, Adele Peterson
bdakin: review+
Mehmet
Comment 1 2011-12-08 14:42:20 PST
Created attachment 118474 [details] Webkit Scrollbar Bug
Mehmet
Comment 2 2011-12-08 14:43:43 PST
*** Bug 74128 has been marked as a duplicate of this bug. ***
Mehmet
Comment 3 2011-12-21 17:17:41 PST
Please, if possible, this should be a blocker for the next Safari Stable.
Mehmet
Comment 4 2012-01-13 10:42:52 PST
Created attachment 122454 [details] Screenshot What I noticed is, that the scrollbar is drawn correctly on youtube.com. But it is still broken e.g. on bugs.webkit.org. Screenshot attached.
Mehmet
Comment 5 2012-03-12 16:40:39 PDT
Hi. I can't believe that this annoying visual UI issue is now landed on Safari stable Version 5.1.4 (6534.54.16) :-( This issue is known since 3 months and it has still the status unconfirmed. There was so much time to fix this issue :-(
Alexey Proskuryakov
Comment 6 2012-03-12 16:46:00 PDT
Are you saying that this worked in Safari 5.1.2, and broke in 5.1.4? In the future, please explicitly mention when something is a regression. From the report, it sounded like this was a long-standing problem, still occurring in nightly builds.
Mehmet
Comment 7 2012-03-12 16:54:44 PDT
Hi Alexey, sorry for the misunderstanding and my poor description. But when I run the latest Webkit, the actual Safari version is also mentioned in the 'About Safari Box'. Yes, it worked well in official Safari 5.1.2 and it is now broken in official 5.1.4 on Mac OS 10.6.8. If you need more information, please let me know. Regards Mehmet
Radar WebKit Bug Importer
Comment 8 2012-03-27 15:33:28 PDT
Adele Peterson
Comment 9 2012-04-04 17:31:20 PDT
If we could figure out what change regressed this, that would help.
Simon Fraser (smfr)
Comment 10 2012-04-04 23:24:15 PDT
Adele Peterson
Comment 11 2012-04-05 14:46:16 PDT
Created attachment 135908 [details] patch Uploading for review. Since these scrollbars aren't testable in DRT, I'm manually testing on multiple platforms before this goes in.
Adele Peterson
Comment 12 2012-04-05 22:24:11 PDT
Mehmet
Comment 13 2012-04-05 22:30:16 PDT
Thanks!!!
Note You need to log in before you can comment on or make changes to this bug.