<rdar://problem/11133179> and https://bugs.webkit.org/show_bug.cgi?id=74129 REGRESSION (SnowLeopard, 5.1.4): All WK2 horizontal scrollbars look broken

Patch by Dan Bernstein, Reviewed by Beth Dakin.

This code assumed that the current CTM wouldn't have extraneous operations built into it,
but this bug is evidence that that assumption was wrong. We should just get the base CTM instead
and apply the device scale factor to it.

No tests added since the SnowLeopard-style scrollbars aren't testable in our regression tests right now.

* platform/graphics/GraphicsContext.cpp:
(WebCore::GraphicsContext::platformApplyDeviceScaleFactor):
(WebCore::GraphicsContext::applyDeviceScaleFactor):
* platform/graphics/GraphicsContext.h: (GraphicsContext):
* platform/graphics/cg/GraphicsContextCG.cpp: (WebCore::GraphicsContext::platformApplyDeviceScaleFactor):



Canonical link: https://commits.webkit.org/100745@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113415 268f45cc-cd09-0410-ab3c-d52691b4dbfc